# Auto_generate_vedio

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: workflow.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: doubao_client.py  export_service.py  helpers.py  job_store.py  prompts.py  request_config_resolver.py  video_compose_service.py  workflow_service.py
backend/tests/: test_doubao_client.py  test_export_service.py  test_helpers.py  test_job_store.py  test_narration_role_filter.py  test_request_config_resolver.py  test_schemas.py  test_video_compose_service.py  test_workflow_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css
frontend/src/lib/: api.ts  constants.ts  types.ts
frontend/src/styles/: animations.css  base.css  design-tokens.css  utilities.css
frontend/src/utils/: helpers.ts  migration.ts
